--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <!-- About Section -->
     <div class="about-section">
         <h1>கோவில் பற்றி</h1>
+        <p>சுவாமியே சரணம் ஐயப்பா</p>
         <img src="images/td.jpeg" alt="God Image">
         <p>பக்தர்கள் தங்கள் பிரார்த்தனைகளை நிறைவேற்றவும், அய்யப்பன் அருள் பெறவும் அமைதியான சூழலை இந்த ஆலயம் வழங்குகிறது.
              இந்த கோவில் தென்னிந்திய பாரம்பரிய கட்டிடக்கலை பாணியை பின்பற்றுகிறது மற்றும் சிக்கலான சிற்பங்கள் மற்றும் சிற்பங்களை கொண்டுள்ளது.</p>
