--- a/history.html
+++ b/history.html
@@ -42,10 +42,13 @@
 <body>
     <h1>பழமையான வரலாறு</h1>
     <div class="history-content">
-        <p>இக்கோயில் ஸ்தாபனத்தின் உன்னத வரலாற்றைப் பெற்றுள்ளது. ஆரம்ப கட்டத்தில், குறிப்பாக 1995 ஆம் ஆண்டில் சில பக்தர்கள் பஜனைகள் மூலம் எளிய வழிபாட்டில் பூஜைப் பாடலைத் தொடங்கினர். பாரம்பரிய மண்டல பூஜையின் போது "அய்யப்பன் விளக்கு பூஜை"யை தொடங்கினர். பின்னர் சபரி மலை யாத்திரையை தொடங்கினர். இந்த வழக்கம் முறையாக ஒழுங்குபடுத்தப்பட்டு, ஒவ்வொரு ஆண்டும் தொடர்ந்து வந்தது. தென்னிந்தியாவின் மிகப்பெரிய நகரங்களில் ஒன்று சென்னை. ஸ்ரீ ஐயப்ப சுவாமி கோவில் நகரின் நடுப்பகுதியில் அமைந்துள்ளது.
-
-
-            இரண்டாவது சபரி மாலையாக இக்கோவிலை போற்றுவதில் பக்தர்கள் பெருமை கொள்கின்றனர். சித்தாபுதூர் ஐயப்ப சுவாமி கோவில் மிகவும் பிரசித்தி பெற்ற கோவிலாகும். மற்ற மாநிலங்களில் இருந்து வரும் பக்தர்கள், அவர்கள் சபரிமலை யாத்திரையை புனித மாலை மற்றும் "விர்த்தா" (நடைமுறை உணவு கட்டுப்பாடுகள்) மூலம் தொடங்குகின்றனர். தங்கள் யாத்திரையின் போது, ​​அவர்கள் சித்தாபுதூர் ஸ்ரீ ஐயப்ப ஸ்வாமி கோவிலுக்குச் சென்று ஓய்வெடுக்கிறார்கள். பின்னர் அவர்கள் யாத்திரையைத் தொடர்கிறார்கள். மேலும் இந்த கோவில் இந்தியா முழுவதிலும் இருந்து வரும் பக்தர்களுக்கு ஓய்வெடுப்பதற்கான நடுநிலையமாக கருதப்படுகிறது. இந்த இடம் தூய்மை மற்றும் தெய்வீகத்தன்மைக்கு பெயர் பெற்றது.
+        <p>இக்கோயில் ஸ்தாபனத்தின் உன்னத வரலாற்றைப் பெற்றுள்ளது. ஆரம்ப கட்டத்தில், குறிப்பாக 1995 ஆம் ஆண்டில் சில பக்தர்கள் பஜனைகள் மூலம் எளிய வழிபாட்டில் பூஜைப் பாடலைத் தொடங்கினர். பாரம்பரிய மண்டல பூஜையின் போது "அய்யப்பன் விளக்கு பூஜை"யை தொடங்கினர்.</p> 
+        <p>பின்னர் சபரி மலை யாத்திரையை தொடங்கினர். இந்த வழக்கம் முறையாக ஒழுங்குபடுத்தப்பட்டு, ஒவ்வொரு ஆண்டும் தொடர்ந்து வந்தது.</p> 
+        <p>தென்னிந்தியாவின் மிகப்பெரிய நகரங்களில் ஒன்று சென்னை. ஸ்ரீ ஐயப்ப சுவாமி கோவில் நகரின் நடுப்பகுதியில் அமைந்துள்ளது.</p>
+        <p>இரண்டாவது சபரி மாலையாக இக்கோவிலை போற்றுவதில் பக்தர்கள் பெருமை கொள்கின்றனர். சித்தாபுதூர் ஐயப்ப சுவாமி கோவில் மிகவும் பிரசித்தி பெற்ற கோவிலாகும்.</p> 
+        <p>மற்ற மாநிலங்களில் இருந்து வரும் பக்தர்கள், அவர்கள் சபரிமலை யாத்திரையை புனித மாலை மற்றும் "விர்த்தா" (நடைமுறை உணவு கட்டுப்பாடுகள்) மூலம் தொடங்குகின்றனர்.</p>
+        <p>தங்கள் யாத்திரையின் போது, ​​அவர்கள் சித்தாபுதூர் ஸ்ரீ ஐயப்ப ஸ்வாமி கோவிலுக்குச் சென்று ஓய்வெடுக்கிறார்கள். பின்னர் அவர்கள் யாத்திரையைத் தொடர்கிறார்கள்.</p>
+        <p>மேலும் இந்த கோவில் இந்தியா முழுவதிலும் இருந்து வரும் பக்தர்களுக்கு ஓய்வெடுப்பதற்கான நடுநிலையமாக கருதப்படுகிறது. இந்த இடம் தூய்மை மற்றும் தெய்வீகத்தன்மைக்கு பெயர் பெற்றது.</p>
         </p>
         <!-- Add detailed temple history here -->
     </div>
