--- a/festival-details.html
+++ b/festival-details.html
@@ -7,48 +7,123 @@
     <title>Festival Details</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-    table.festival-table {
-    margin: 20px 0;
-    font-size: 1rem;
-    text-align: center;
-    border: 2px solid #4CAF50;
-}
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-table.festival-table th {
-    background-color: #4CAF50;
-    color: white;
-    font-weight: bold;
-}
+        header.head {
+            text-align: center;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+        }
 
-table.festival-table td {
-    padding: 8px;
-    border: 1px solid #4CAF50;
-}
+        main {
+            padding: 20px;
+        }
 
-table.festival-table tr:hover {
-    background-color: #d9f2d9;
-}
+        table.festival-table {
+            width: 100%;
+            margin: 20px 0;
+            font-size: 1rem;
+            text-align: center;
+            border: 2px solid #4CAF50;
+            border-collapse: collapse;
+        }
 
-/* Additional Animation */
-@keyframes bounceIn {
-    0% {
-        transform: scale(0.9);
-        opacity: 0;
-    }
-    50% {
-        transform: scale(1.05);
-        opacity: 0.8;
-    }
-    100% {
-        transform: scale(1);
-        opacity: 1;
-    }
-}
+        table.festival-table th {
+            background-color: #4CAF50;
+            color: white;
+            font-weight: bold;
+            padding: 10px;
+        }
 
-table.festival-table {
-    animation: bounceIn 0.8s ease;
-}
+        table.festival-table td {
+            padding: 8px;
+            border: 1px solid #4CAF50;
+        }
 
+        table.festival-table tr:hover {
+            background-color: #d9f2d9;
+        }
+
+        /* Additional Animation */
+        @keyframes bounceIn {
+            0% {
+                transform: scale(0.9);
+                opacity: 0;
+            }
+            50% {
+                transform: scale(1.05);
+                opacity: 0.8;
+            }
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        table.festival-table {
+            animation: bounceIn 0.8s ease;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            table.festival-table {
+                font-size: 0.9rem;
+            }
+
+            table.festival-table th, table.festival-table td {
+                padding: 6px;
+            }
+        }
+
+        @media (max-width: 576px) {
+            table.festival-table th, table.festival-table td {
+                padding: 4px;
+                font-size: 0.85rem;
+            }
+
+            table.festival-table th {
+                font-size: 1rem;
+            }
+        }
+
+        /* For very small screens, stack the data */
+        @media (max-width: 480px) {
+            table.festival-table, table.festival-table th, table.festival-table td {
+                display: block;
+                width: 100%;
+                text-align: left;
+            }
+
+            table.festival-table tr {
+                margin-bottom: 15px;
+                border-bottom: 1px solid #4CAF50;
+            }
+
+            table.festival-table th {
+                background-color: #4CAF50;
+                color: white;
+                padding: 8px;
+            }
+
+            table.festival-table td {
+                padding: 8px 10px;
+                text-align: left;
+                border: none;
+            }
+
+            table.festival-table td::before {
+                content: attr(data-label);
+                font-weight: bold;
+                display: inline-block;
+                margin-right: 10px;
+                color: #4CAF50;
+            }
+        }
     </style>
 </head>
 
@@ -66,18 +141,18 @@ table.festival-table {
                 <th>திருவிழா நேரம்</th>
             </tr>
             <tr>
-                <td>1</td>
-                <td>14-Jan</td>
-                <td>Pongal</td>
-                <td>Traditional Harvest Festival</td>
-                <td>6:00 AM - 12:00 PM</td>
+                <td data-label="S.No">1</td>
+                <td data-label="திருவிழா தேதி">14-Jan</td>
+                <td data-label="திருவிழாவின் பெயர்">Pongal</td>
+                <td data-label="திருவிழா விவரங்கள்">Traditional Harvest Festival</td>
+                <td data-label="திருவிழா நேரம்">6:00 AM - 12:00 PM</td>
             </tr>
             <tr>
-                <td>2</td>
-                <td>20-Dec</td>
-                <td>Mandalapuja</td>
-                <td>Special Abhishekam and offerings</td>
-                <td>5:00 AM - 7:30 AM</td>
+                <td data-label="S.No">2</td>
+                <td data-label="திருவிழா தேதி">20-Dec</td>
+                <td data-label="திருவிழாவின் பெயர்">Mandalapuja</td>
+                <td data-label="திருவிழா விவரங்கள்">Special Abhishekam and offerings</td>
+                <td data-label="திருவிழா நேரம்">5:00 AM - 7:30 AM</td>
             </tr>
         </table>
     </main>
