--- a/festival-details.html
+++ b/festival-details.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festival Details</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            color: #333;
         }
 
         header {
@@ -21,6 +21,7 @@
             color: white;
             font-size: 1.8rem;
             margin-bottom: 20px;
+            border-radius: 0 0 10px 10px;
         }
 
         main {
@@ -47,11 +48,12 @@
             background-color: #4CAF50;
             color: white;
             font-weight: bold;
-            padding: 15px 10px;
+            padding: 15px;
+            text-transform: uppercase;
         }
 
         table.festival-table td {
-            padding: 12px 10px;
+            padding: 12px 15px;
             border-bottom: 1px solid #dddddd;
         }
 
