--- a/festival-details.html
+++ b/festival-details.html
@@ -19,7 +19,7 @@
             padding: 20px;
             background-color: #4CAF50;
             color: white;
-            font-size: 1.8rem;
+            font-size: 2rem;
             margin-bottom: 20px;
             border-radius: 0 0 10px 10px;
         }
@@ -37,54 +37,40 @@
             margin: 20px auto;
             font-size: 1rem;
             text-align: center;
-            border-collapse: collapse;
+            border-collapse: separate;
+            border-spacing: 0;
             background-color: #ffffff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
             overflow: hidden;
         }
 
-        table.festival-table th {
+        thead {
             background-color: #4CAF50;
             color: white;
+        }
+
+        table.festival-table th,
+        table.festival-table td {
+            padding: 12px 15px;
+            border: 1px solid #ddd;
+        }
+
+        table.festival-table th {
             font-weight: bold;
-            padding: 15px;
             text-transform: uppercase;
         }
 
         table.festival-table td {
-            padding: 12px 15px;
-            border-bottom: 1px solid #dddddd;
+            background-color: #f9f9f9;
         }
 
-        table.festival-table tr:hover {
+        table.festival-table tr:nth-child(even) td {
             background-color: #f1f1f1;
         }
 
-        table.festival-table tr:last-child td {
-            border-bottom: none;
-        }
-
-        /* Animation */
-        @keyframes bounceIn {
-            0% {
-                transform: scale(0.9);
-                opacity: 0;
-            }
-
-            50% {
-                transform: scale(1.05);
-                opacity: 0.8;
-            }
-
-            100% {
-                transform: scale(1);
-                opacity: 1;
-            }
-        }
-
-        table.festival-table {
-            animation: bounceIn 0.8s ease;
+        table.festival-table tr:hover td {
+            background-color: #e0f7fa;
         }
 
         /* Responsive Design */
@@ -105,7 +91,7 @@
 
             tr {
                 margin-bottom: 15px;
-                border: 1px solid #4CAF50;
+                border: 1px solid #ddd;
                 padding: 10px;
                 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             }
@@ -115,7 +101,8 @@
                 padding-left: 50%;
                 position: relative;
                 border: none;
-                border-bottom: 1px solid #dddddd;
+                border-bottom: 1px solid #ddd;
+                background-color: #ffffff;
             }
 
             td::before {
@@ -123,8 +110,8 @@
                 position: absolute;
                 left: 10px;
                 font-weight: bold;
-                text-transform: uppercase;
                 color: #4CAF50;
+                text-transform: uppercase;
             }
 
             td:last-child {
