--- a/festival-details.html
+++ b/festival-details.html
@@ -32,13 +32,10 @@
         }
 
         table.festival-table {
-            width: 90%;
+            width: 100%;
             max-width: 1200px;
-            margin: 20px auto;
-            font-size: 1rem;
-            text-align: center;
-            border-collapse: separate;
-            border-spacing: 0;
+            margin: 0 auto;
+            border-collapse: collapse;
             background-color: #ffffff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
@@ -122,7 +119,7 @@
 </head>
 
 <body>
-    <header class="head">
+    <header>
         <h1>திருவிழா விவரங்கள்</h1>
     </header>
     <main>
