--- a/festival-details.html
+++ b/festival-details.html
@@ -5,69 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festival Details</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        header {
-            text-align: center;
-            padding: 20px;
-            background-color: #4CAF50;
-            color: white;
-            font-size: 2rem;
-            margin-bottom: 20px;
-            border-radius: 0 0 10px 10px;
-        }
-
-        main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-
         table.festival-table {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            border-collapse: collapse;
-            background-color: #ffffff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            overflow: hidden;
-        }
-
-        thead {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        table.festival-table th,
-        table.festival-table td {
-            padding: 12px 15px;
-            border: 1px solid #ddd;
+            margin: 20px 0;
+            font-size: 1rem;
+            text-align: center;
+            border: 2px solid #4CAF50;
         }
 
         table.festival-table th {
+            background-color: #4CAF50;
+            color: white;
             font-weight: bold;
-            text-transform: uppercase;
         }
 
         table.festival-table td {
-            background-color: #f9f9f9;
+            padding: 8px;
+            border: 1px solid #4CAF50;
         }
 
-        table.festival-table tr:nth-child(even) td {
-            background-color: #f1f1f1;
+        table.festival-table tr:hover {
+            background-color: #d9f2d9;
         }
 
-        table.festival-table tr:hover td {
-            background-color: #e0f7fa;
+        /* Additional Animation */
+        @keyframes bounceIn {
+            0% {
+                transform: scale(0.9);
+                opacity: 0;
+            }
+
+            50% {
+                transform: scale(1.05);
+                opacity: 0.8;
+            }
+
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        table.festival-table {
+            animation: bounceIn 0.8s ease;
         }
 
         /* Responsive Design */
@@ -88,7 +69,7 @@
 
             tr {
                 margin-bottom: 15px;
-                border: 1px solid #ddd;
+                border: 1px solid #4CAF50;
                 padding: 10px;
                 box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             }
@@ -98,8 +79,7 @@
                 padding-left: 50%;
                 position: relative;
                 border: none;
-                border-bottom: 1px solid #ddd;
-                background-color: #ffffff;
+                border-bottom: 1px solid #4CAF50;
             }
 
             td::before {
@@ -107,7 +87,6 @@
                 position: absolute;
                 left: 10px;
                 font-weight: bold;
-                color: #4CAF50;
                 text-transform: uppercase;
             }
 
@@ -119,7 +98,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="head">
         <h1>திருவிழா விவரங்கள்</h1>
     </header>
     <main>
