--- a/festival-details.html
+++ b/festival-details.html
@@ -52,39 +52,13 @@
 
         /* Responsive table */
         @media screen and (max-width: 600px) {
+            .festival-table-wrapper {
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch;
+            }
+
             table.festival-table {
-                width: 100%;
-                border-collapse: collapse;
-            }
-
-            table.festival-table thead {
-                display: none;
-            }
-
-            table.festival-table, table.festival-table tbody, table.festival-table tr, table.festival-table td {
-                display: block;
-                width: 100%;
-            }
-
-            table.festival-table tr {
-                margin-bottom: 15px;
-                border-bottom: 1px solid #4CAF50;
-            }
-
-            table.festival-table td {
-                text-align: right;
-                padding-left: 50%;
-                position: relative;
-            }
-
-            table.festival-table td::before {
-                content: attr(data-label);
-                position: absolute;
-                left: 0;
-                width: 50%;
-                padding-left: 10px;
-                font-weight: bold;
-                white-space: nowrap;
+                min-width: 600px; /* Ensures the table does not shrink beyond its content */
             }
         }
     </style>
@@ -95,33 +69,35 @@
         <h1>திருவிழா விவரங்கள்</h1>
     </header>
     <main>
-        <table class="festival-table">
-            <thead>
-                <tr>
-                    <th>S.No</th>
-                    <th>திருவிழா தேதி</th>
-                    <th>திருவிழாவின் பெயர்</th>
-                    <th>திருவிழா விவரங்கள்</th>
-                    <th>திருவிழா நேரம்</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td data-label="S.No">1</td>
-                    <td data-label="திருவிழா தேதி">14-Jan</td>
-                    <td data-label="திருவிழாவின் பெயர்">Pongal</td>
-                    <td data-label="திருவிழா விவரங்கள்">Traditional Harvest Festival</td>
-                    <td data-label="திருவிழா நேரம்">6:00 AM - 12:00 PM</td>
-                </tr>
-                <tr>
-                    <td data-label="S.No">2</td>
-                    <td data-label="திருவிழா தேதி">20-Dec</td>
-                    <td data-label="திருவிழாவின் பெயர்">Mandalapuja</td>
-                    <td data-label="திருவிழா விவரங்கள்">Special Abhishekam and offerings</td>
-                    <td data-label="திருவிழா நேரம்">5:00 AM - 7:30 AM</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="festival-table-wrapper">
+            <table class="festival-table">
+                <thead>
+                    <tr>
+                        <th>S.No</th>
+                        <th>திருவிழா தேதி</th>
+                        <th>திருவிழாவின் பெயர்</th>
+                        <th>திருவிழா விவரங்கள்</th>
+                        <th>திருவிழா நேரம்</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>14-Jan</td>
+                        <td>Pongal</td>
+                        <td>Traditional Harvest Festival</td>
+                        <td>6:00 AM - 12:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>20-Dec</td>
+                        <td>Mandalapuja</td>
+                        <td>Special Abhishekam and offerings</td>
+                        <td>5:00 AM - 7:30 AM</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 </body>
 
