--- a/temple-images.html
+++ b/temple-images.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Images</title>
+    <title>Advanced Temple Images Gallery</title>
     <style>
         body {
             font-family: 'Latha', sans-serif;
@@ -23,7 +23,7 @@
             flex-wrap: wrap;
             justify-content: center;
             margin: 10px;
-            gap:40px;
+            gap: 40px;
         }
 
         .gallery img {
@@ -32,49 +32,248 @@
             width: 200px;
             height: 150px;
             object-fit: cover;
-            transition: transform 0.3s;
+            cursor: pointer;
+            transition: transform 0.3s ease;
         }
 
         .gallery img:hover {
             transform: scale(1.1);
         }
 
-        @media (max-width: 768px) {
-            .gallery img {
-                width: 100%;
-                height: auto;
-            }
-        }
+        /* Lightbox Styles */
+.lightbox {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn 0.5s;
+}
+
+.lightbox.active {
+    display: flex;
+}
+
+.lightbox-content {
+    position: relative;
+    max-width: 80%;
+    max-height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.lightbox img {
+    /* Default size for large screens */
+    max-width: 60%;
+    max-height: 60%;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+    animation: zoomIn 0.5s;
+}
+
+/* Close, Next, Prev button styles */
+.lightbox .close-btn,
+.lightbox .next-btn,
+.lightbox .prev-btn {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 20px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.lightbox .close-btn {
+    top: 5px;
+    right: 1px;
+}
+
+.lightbox .next-btn {
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.lightbox .prev-btn {
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.lightbox .next-btn:hover,
+.lightbox .prev-btn:hover,
+.lightbox .close-btn:hover {
+    background-color: #e74c3c;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes zoomIn {
+    from {
+        transform: scale(0.8);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
+/* Responsive adjustments */
+
+/* For tablets and medium screens */
+@media (max-width: 1024px) {
+    .lightbox img {
+        max-width: 70%; /* Slightly larger for tablets */
+        max-height: 70%;
+    }
+}
+
+/* For small screens like smartphones */
+@media (max-width: 768px) {
+    .lightbox img {
+        max-width: 90%; /* Full width for mobile */
+        max-height: 80%;
+    }
+
+    /* Reduce the size of the buttons */
+    .lightbox .close-btn, .lightbox .next-btn, .lightbox .prev-btn {
+        font-size: 16px;
+        padding: 8px;
+    }
+}
+
+@media (max-width: 480px) {
+    .lightbox img {
+        max-width: 95%; /* Max size for very small screens */
+        max-height: 85%;
+    }
+
+    /* Buttons become smaller */
+    .lightbox .close-btn, .lightbox .next-btn, .lightbox .prev-btn {
+        font-size: 14px;
+        padding: 6px;
+    }
+}
+
+
     </style>
 </head>
 
 <body>
     <h1>கோவில் படங்கள்</h1>
     <div class="gallery">
-        <img src="images/1.jpg" alt="Temple Image 1">
-        <img src="images/2.jpg" alt="Temple Image 2">
-        <img src="images/Ayyappan-1-850x1024-1.jpg" alt="Temple Image 3">
-        <img src="images/Ayyappan-11.jpg" alt="Temple Image 4">
-        <img src="images/Ayyappan-5.jpg" alt="Temple Image 4">
-        <img src="images/Ayyappan-7.jpg" alt="Temple Image 4">
-        <img src="images/Ayyappan-9.jpg" alt="Temple Image 4">
-        <img src="images/AYYAPPAN-TEMPLE.jpg" alt="Temple Image 4">
-        <img src="images/IMG_20240825_134933.jpg" alt="Temple Image 4">
-        <img src="images/IMG_20240825_134948.jpg" alt="Temple Image 4">
-        <img src="images/IMG_20240825_135036.jpg" alt="Temple Image 4">
-        <img src="images/IMG_20240825_135112.jpg" alt="Temple Image 4">
-        <img src="images/IMG_20240825_135144.jpg" alt="Temple Image 4">
-        <img src="images/IMG_20240825_135159.jpg" alt="Temple Image 4">
-        <img src="images/IMG_20240825_135228.jpg" alt="Temple Image 4">
-        <img src="images/IMG_20240825_135243.jpg" alt="Temple Image 4">
-        <img src="images/Slide.jpg" alt="Temple Image 4">
-        <img src="images/Slide1.jpg" alt="Temple Image 4">
-        <img src="images/Slide2.jpg" alt="Temple Image 4">
-        <img src="images/Swamiye-Saranam-Ayyappa-2.jpg" alt="Temple Image 4">
-
-
-        <!-- Add more images -->
+        <img src="images/1.jpg" alt="Temple Image 1" data-index="0">
+        <img src="images/2.jpg" alt="Temple Image 2" data-index="1">
+        <img src="images/Ayyappan-1-850x1024-1.jpg" alt="Temple Image 3" data-index="2">
+        <img src="images/Ayyappan-11.jpg" alt="Temple Image 4" data-index="3">
+        <img src="images/Ayyappan-5.jpg" alt="Temple Image 5" data-index="4">
+        <img src="images/Ayyappan-7.jpg" alt="Temple Image 6" data-index="5">
+        <img src="images/Ayyappan-9.jpg" alt="Temple Image 7" data-index="6">
+        <img src="images/Ayyappan-11.jpg" alt="Temple Image 8" data-index="7">
+        <img src="images/AYYAPPAN-TEMPLE.jpg" alt="Temple Image 9" data-index="8">
+        <img src="images/IMG_20240825_135243.jpg" alt="Temple Image 10" data-index="9">
+        <img src="images/IMG_20240825_134933.jpg" alt="Temple Image 11" data-index="10">
+        <img src="images/IMG_20240825_134948.jpg" alt="Temple Image 12" data-index="11">
+        <img src="images/IMG_20240825_135036.jpg" alt="Temple Image 13" data-index="12">
+        <img src="images/IMG_20240825_135112.jpg" alt="Temple Image 14" data-index="13">
+        <img src="images/IMG_20240825_135144.jpg" alt="Temple Image 15" data-index="14">
+        <img src="images/IMG_20240825_135159.jpg" alt="Temple Image 16" data-index="15">
+        <img src="images/IMG_20240825_135228.jpg" alt="Temple Image 17" data-index="16">
+        <img src="images/Slide.jpg" alt="Temple Image 18" data-index="17">
+        <img src="images/Slide2.jpg" alt="Temple Image 19" data-index="18">
+        <img src="images/Swamiye-Saranam-Ayyappa-2.jpg" alt="Temple Image 20" data-index="19">
+        <!-- Add more images as needed -->
     </div>
+
+    <!-- Lightbox Structure -->
+    <div class="lightbox" id="lightbox">
+        <div class="lightbox-content">
+            <button class="prev-btn">&lsaquo;</button>
+            <img src="" alt="Lightbox Image" id="lightbox-img">
+            <button class="next-btn">&rsaquo;</button>
+            <button class="close-btn">&times;</button>
+        </div>
+    </div>
+
+    <script>
+        const images = document.querySelectorAll('.gallery img');
+        const lightbox = document.getElementById('lightbox');
+        const lightboxImg = document.getElementById('lightbox-img');
+        const prevBtn = document.querySelector('.prev-btn');
+        const nextBtn = document.querySelector('.next-btn');
+        const closeBtn = document.querySelector('.close-btn');
+
+        let currentIndex = 0;
+
+        // Function to open lightbox
+        function openLightbox(index) {
+            lightbox.classList.add('active');
+            lightboxImg.src = images[index].src;
+            currentIndex = index;
+        }
+
+        // Function to close lightbox
+        function closeLightbox() {
+            lightbox.classList.remove('active');
+        }
+
+        // Show previous image
+        function showPrev() {
+            currentIndex = (currentIndex === 0) ? images.length - 1 : currentIndex - 1;
+            lightboxImg.src = images[currentIndex].src;
+        }
+
+        // Show next image
+        function showNext() {
+            currentIndex = (currentIndex === images.length - 1) ? 0 : currentIndex + 1;
+            lightboxImg.src = images[currentIndex].src;
+        }
+
+        // Event listeners for gallery images
+        images.forEach((img, index) => {
+            img.addEventListener('click', () => openLightbox(index));
+        });
+
+        // Event listeners for lightbox buttons
+        closeBtn.addEventListener('click', closeLightbox);
+        prevBtn.addEventListener('click', showPrev);
+        nextBtn.addEventListener('click', showNext);
+
+        // Close lightbox when clicking outside the image
+        lightbox.addEventListener('click', (e) => {
+            if (e.target === lightbox) {
+                closeLightbox();
+            }
+        });
+
+        // Keyboard navigation (Optional)
+        document.addEventListener('keydown', (e) => {
+            if (lightbox.classList.contains('active')) {
+                if (e.key === 'ArrowRight') {
+                    showNext();
+                } else if (e.key === 'ArrowLeft') {
+                    showPrev();
+                } else if (e.key === 'Escape') {
+                    closeLightbox();
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
