--- a/pooja-time.html
+++ b/pooja-time.html
@@ -136,10 +136,25 @@ p.info{
         
 
         <h1 style="font-size: 24px; text-align: center;">எப்போதாவது பூஜைகள்</h1>
-        <details style="font-size: 20px;">
-        <p>கோயம்புத்தூர் ஸ்ரீ ஐயப்ப சேவா சங்கத்தின் நிறுவனர் அறங்காவலர்களால், ஸ்ரீ சித்தாபுதூர் அய்யப்பன் கோவில் நிர்வகிக்கப்படுகிறது. இந்த கோவிலில் உள்ள பூஜைகளும் ஆகமங்களும் கேரளாவின் மஹாக்ஷேத்திரங்களில் கடைப்பிடிக்கப்படுவது போல் கண்டிப்பாக கடைபிடிக்கப்படுகிறது. இந்த கோவிலுக்கு மண்டலத்தின் போது கோயம்புத்தூர் மட்டுமின்றி நாடு மற்றும் வெளிநாடுகளில் இருந்தும் ஆயிரக்கணக்கான பக்தர்கள் வந்து வழிபடுகின்றனர். பூஜைகள், ஜனவரி முதல் டிசம்பர் வரை சிறப்பு பூஜைகள் அதிகம். சபரிமலையில் மகரஜோதி தோன்றும் ஜனவரி 14ம் தேதி மகரவிளக்கு நாளில் கோயில் மேல்சாந்தி மூலம் மகாதீபாராதனையும், பக்தர்களுக்கு புனித ஜோதியும் காட்டப்படும். பிப்ரவரி மாதம் (கும்ப மாதம் ஆயில்ய நட்சத்திரம்) சிறப்பு பூஜை செய்யப்படுகிறது. நாகராஜப் பெருமானுக்கு, புகழ்பெற்ற பாம்புமேக்கட் இல்லத்தில் இருந்து புகழ்பெற்ற அர்ச்சகர்கள். இக்கோயிலில் வருடத்திற்கு ஒருமுறை நடைபெறும் இந்த பூஜை, நாகதோஷம், திருமண தோஷம், புத்திர தோஷம் போன்றவற்றில் இருந்து மீண்டு வருவதற்காக செய்யப்படுகிறது.,</p>
-
-        </details>
+        <div style="max-width: 600px; margin: 20px auto; padding: 20px; background-color: #ffffff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border-radius: 12px; border: 1px solid #ddd;">
+            <details style="font-size: 20px; padding: 15px; background-color: #f9f9f9; border: 1px solid #ddd; border-radius: 10px;">
+                <summary style="font-weight: bold; cursor: pointer;">கோயம்புத்தூர் ஸ்ரீ ஐயப்ப சேவா சங்கம் பற்றி மேலும் தகவல்</summary>
+                <p style="line-height: 1.8; color: #333; margin-top: 10px;">
+                    கோயம்புத்தூர் ஸ்ரீ ஐயப்ப சேவா சங்கத்தின் நிறுவனர் அறங்காவலர்களால், ஸ்ரீ சித்தாபுதூர் அய்யப்பன் கோவில் நிர்வகிக்கப்படுகிறது. 
+                    இந்த கோவிலில் உள்ள பூஜைகளும் ஆகமங்களும் கேரளாவின் மஹாக்ஷேத்திரங்களில் கடைப்பிடிக்கப்படுவது போல் கண்டிப்பாக கடைபிடிக்கப்படுகிறது. 
+                    இந்த கோவிலுக்கு மண்டலத்தின் போது கோயம்புத்தூர் மட்டுமின்றி நாடு மற்றும் வெளிநாடுகளில் இருந்தும் ஆயிரக்கணக்கான பக்தர்கள் வந்து வழிபடுகின்றனர். 
+                    பூஜைகள், ஜனவரி முதல் டிசம்பர் வரை சிறப்பு பூஜைகள் அதிகம்.
+                </p>
+                <p style="line-height: 1.8; color: #333;">
+                    சபரிமலையில் மகரஜோதி தோன்றும் ஜனவரி 14ம் தேதி மகரவிளக்கு நாளில் கோயில் மேல்சாந்தி மூலம் மகாதீபாராதனையும், 
+                    பக்தர்களுக்கு புனித ஜோதியும் காட்டப்படும். பிப்ரவரி மாதம் (கும்ப மாதம் ஆயில்ய நட்சத்திரம்) சிறப்பு பூஜை செய்யப்படுகிறது.
+                </p>
+                <p style="line-height: 1.8; color: #333;">
+                    நாகராஜப் பெருமானுக்கு, புகழ்பெற்ற பாம்புமேக்கட் இல்லத்தில் இருந்து புகழ்பெற்ற அர்ச்சகர்கள். இக்கோயிலில் வருடத்திற்கு 
+                    ஒருமுறை நடைபெறும் இந்த பூஜை, நாகதோஷம், திருமண தோஷம், புத்திர தோஷம் போன்றவற்றில் இருந்து மீண்டு வருவதற்காக செய்யப்படுகிறது.
+                </p>
+            </details>
+        </div>
     
         </main>
 </body>
